<resources>
    <string name="app_name">Vanilla Notes</string>
    <string name="button_text">Add Note</string>
    <string name="enter_your_note">Enter your note…</string>
    <string name="search_hint">Search notes…</string>
    <string name="search_hint_fav">Search favorites…</string>

    <string name="save">Save</string>
    <string name="clear">Clear</string>

    <!-- Main Activity -->
    <string name="clear_notes_title">Clear All Notes</string>
    <string name="clear_notes_text">Would you like to clear all the notes?</string>
    <string name="clear_notes_toast">Notes cleared</string>

    <!-- Trash Fragment -->
    <string name="trash_empty">Nothing here…</string>
    <string name="trash_clear_confirm">Are you sure you want to empty the trash?
        The notes cannot be recovered after this</string>
    <string name="clear_error_title">Trash Empty</string>
    <string name="trash_error">The trash is already empty and cannot be cleared again</string>

    <!-- Note Edit Activity -->
    <string name="enter_your_title">Title</string>
    <string name="date_created">Date Created: %1$s</string>
    <string name="delete_title">Delete Note</string>
    <string name="delete_confirm">Are you sure you want to delete this note?</string>
    <string name="discard_title">Discard Changes</string>
    <string name="discard_confirm">Are you sure you want to discard any changes?</string>
    <string name="warning_title">Error</string>
    <string name="warning_confirm">Your note is currently blank. Please enter text to save it</string>
    <string name="restore_toast">Note restored</string>
    <string name="delete_toast">Note deleted</string>


    <!-- Menu Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Note</string>
    <string name="action_remove">Trash Can</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete note</string>
    <string name="action_pin">Pin note</string>
    <string name="action_restore">Restore note</string>
    <string name="action_home">Home</string>
    <string name="action_empty">Empty trash</string>
    <string name="action_clear">Clear all notes</string>
    <string name="action_reminder">Set reminder</string>
    <string name="action_color">Set color</string>
    <string name="action_sort">Sort notes</string>
    <string name="action_fav">Favorite note</string>
    <string name="action_unfav">Unfavorite note</string>
    <string name="action_search">Search note</string>

    <!-- Preference Titles -->
    <string name="settings_notes">Notes</string>
    <string name="settings_interface">Interface</string>
    <string name="sync_header">Backup</string>

    <!-- Notes Preferences -->
    <string name="clear_data_title">Clear</string>
    <string name="clear_data_summary">Deletes all notes in the application</string>
    <string name="clear_data_toast">All data cleared</string>
    <string name="clear_data_dialog_text">Would you like to clear ALL data? Your settings will still be saved</string>
    <string name="clear_data_dialog_title">Clear Data</string>
    <string name="back_dialog_toggle">Discard Confirmation</string>
    <string name="back_dialog_toggle_summary">Show a confirmation for discarding your changes to a note</string>

    <!-- Interface Preferences -->
    <string name="font_size_title">Font Size</string>
    <string name="font_size_summary">Adjust the font size of the notes</string>
    <string name="darkmode_title">Dark Mode</string>
    <string name="darkmode_summary">Enable a dark theme for the application</string>

    <!-- Backup Preferences -->
    <string name="auto_backup_toggle">Automatic Backup</string>
    <string name="export_backup_title">Export files</string>
    <string name="export_backup_summary">Export your notes to import into another device</string>
    <string name="import_backup_title">Import files</string>
    <string name="import_backup_summary">Import notes from another device to this one</string>

    <!-- Notification Channel -->
    <string name="channel_name">Notifications</string>
    <string name="channel_description">Channel for pinned notes</string>

    <!-- Navigation Menu -->
    <string name="nav_header_title">Vanilla Notes</string>
    <string name="nav_item_notes">Notes</string>
    <string name="nav_item_trash">Trash</string>
    <string name="nav_item_fav">Favorites</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_title">Other</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_rate">Rate</string>
    <string name="nav_item_more">More</string>
    <string name="back_dialog_toggle_off">Disabled</string>
    <string name="back_dialog_toggle_on">Enabled</string>
    <string name="checkbox_msg">Don\'t show this message again</string>
    <string name="notes_empty">No notes found</string>

    <!-- Favorites -->
    <string name="favs_empty">Add favorites to view them here!</string>
    <string name="delete_favorite_title">Cannot Delete Favorite</string>
    <string name="delete_favorite_message">Please unfavorite this note to move it to the trash</string>

    <!-- Permissions -->
    <string name="perm_dialog_title">Permission needed</string>
    <string name="perm_dialog_msg">This app requires this permission in order to read and write
        files to your device for exporting and importing data.</string>
    <string name="import_error_title">Invalid import file</string>
    <string name="import_error_msg">The file you selected is not a valid import file.
    Please select a file ending in ".vnotes" </string>


</resources>