<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_interface">

        <ListPreference
            app:defaultValue="Medium"
            app:entries="@array/font_entries"
            app:entryValues="@array/font_values"
            app:iconSpaceReserved="false"
            app:key="font_size"
            app:title="@string/font_size_title" />
            <!--app:summary="@string/font_size_summary"-->

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="dark_mode"
            app:title="@string/darkmode_title"
            app:summary="@string/darkmode_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_notes">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="back_dialog_toggle"
            app:title="@string/back_dialog_toggle" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="clear"
            app:title="@string/clear_data_title"
            app:summary="@string/clear_data_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="automatic_backup"
            app:summaryOff="Currently not backing up files automatically"
            app:summaryOn="Files are being backed up"
            app:title="@string/auto_backup_toggle" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="export_backup"
            app:title="@string/export_backup_title"
            app:summary="@string/export_backup_summary" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="import_backup"
            app:title="@string/import_backup_title"
            app:summary="@string/import_backup_summary" />

    </PreferenceCategory>

</PreferenceScreen>