<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_notes"
            android:icon="@drawable/ic_edit_black_24dp"
            tools:ignore="PrivateResource"
            android:title="@string/nav_item_notes" />

        <item android:id="@+id/nav_trash"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/nav_item_trash" />

        <item android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite_24px"
            android:title="@string/nav_item_fav" />

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24px"
            android:title="@string/nav_item_settings" />
    </group>

    <item android:title="@string/nav_title">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/nav_item_about">
            </item>

            <item
                android:id="@+id/nav_rate"
                android:title="@string/nav_item_rate">
            </item>

        </menu>
    </item>
</menu>