<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Save Note -->
    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <!-- Restore note -->
    <item android:id="@+id/action_restore"
        android:title="@string/action_restore"
        android:icon="@drawable/ic_more_vert_black_24dp"
        app:showAsAction="never" />

    <!-- Delete Current Note -->
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />

    <!-- Pin current note -->
    <item android:id="@+id/action_pin"
        android:title="@string/action_pin"
        android:icon="@drawable/ic_more_vert_black_24dp"
        app:showAsAction="never" />


    <!-- Settings -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_more_vert_black_24dp"
        app:showAsAction="never" />



</menu>