<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <!-- Add Note -->
        <item android:id="@+id/action_add"
            android:title="@string/action_add"
            android:icon="@drawable/baseline_add_black_18dp"
            app:showAsAction="always" />

        <!-- Add Clear -->
        <item android:id="@+id/action_remove"
            android:title="@string/action_remove"
            android:icon="@drawable/round_delete_black_18dp"
            app:showAsAction="always" />

        <!-- Settings -->
        <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:icon="@drawable/round_more_vert_black_18dp"
            app:showAsAction="always" />

</menu>