<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <!-- Go back to home activity  -->
        <item android:id="@+id/action_home"
            android:title="@string/action_home"
            android:icon="@drawable/ic_home_black_24dp"
            app:showAsAction="ifRoom" />

        <!-- Empty trash can -->
        <item android:id="@+id/action_empty"
            android:title="@string/action_empty"
            android:icon="@drawable/ic_delete_forever_black_24dp"
            app:showAsAction="ifRoom" />

        <!-- Settings -->
        <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_more_vert_black_24dp"
            app:showAsAction="never" />

</menu>